# electricity-demand-forecasting-lstm-gcp-terraform

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
.github/workflows/: ci.yml
tests/: test_sanity.py
