[project]
name = "electricity-demand-forecasting-lstm-gcp-terraform"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"

# ------------- runtime dependencies ----------
dependencies = [
  "pandas",
  "numpy",
  "torch",
  "mlflow",
  "fastapi",
  "uvicorn[standard]",
  "apache-airflow==2.9.*",
  "evidently",
  "gcsfs"
]

# ------------- optional dev extras ----------
[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "pytest-cov",
  "pre-commit",
  "terraform-python"
]

# ------------- ruff configuration -----------
[tool.ruff]
line-length = 100
lint.select = ["E", "F", "B", "I", "UP"]
target-version = "py312"